--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: cloud-movie-biz1-local
+    name: cloud-movie-demo-local
   h2:
     console:
       enabled: true
@@ -9,23 +9,23 @@ spring:
         
   datasource:
     initialize: true
-#    platform: h2
-#    url: jdbc:h2:mem:testdb;
-#    username: sa
-#    password: null
-    platform: mariadb
-    url: jdbc:mariadb://169.56.113.148:30306/zcp-database
-    username: zcp-user
-    password: Zcp_1234
+    platform: h2
+    url: jdbc:h2:mem:testdb;
+    username: sa
+    password: null
+#    platform: mariadb
+#    url: jdbc:mariadb://169.56.113.148:30306/zcp-database
+#    username: zcp-user
+#    password: Zcp_1234
 
   session:
-    store-type: redis
-  redis:
+    store-type: hash-map
+#  redis:
 #    host: 169.56.83.54
 #    port: 30011
-    host: 169.56.113.148
-    port: 30379
-    password: Zcp_1234
+#    host: 169.56.113.148
+#    port: 30379
+#    password: Zcp_1234
 #    sentinel:
 #      master: mymaster
 #      nodes: 169.56.102.115:16379,169.56.102.120:16379,169.56.102.125:16379
