--- a/src/main/resources/application-stage.yml
+++ b/src/main/resources/application-stage.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: cloud-movie-biz1-local
+    name: cloud-movie-demo-local
   h2:
     console:
       enabled: true
